<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/planezyblue">

        <EditText
            android:id="@+id/emailid"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/planezyblue"
        android:layout_below="@id/layout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:ems="20"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null"
            android:layout_centerHorizontal="true"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/layout_password"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:clickable="true"
        android:text="@string/logintext"
        android:layout_centerHorizontal="true" />

</RelativeLayout>